--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
+        <item name="colorAccent">@color/colorAccent</item>
+
+
+    </style>
     <style name="botao" parent="Theme.AppCompat.Light">
         <item name="colorButtonNormal">@color/colorPrimaryDarker</item>
         <item name="colorControlHighlight">@color/colorPrimary</item>
